force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/Rve_Exam_Application_Line_Item__c.object-meta.xml
<CustomObject>
    <label>REVA Exam Application Line Item</label>
    <nameField>
        <displayFormat>Application Item-{0000}</displayFormat>
        <label>Rve Exam Application Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Exam Application Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>