force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Rve Course Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>