force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Date_Of_Examination__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Examination__c</fullName>
    <label>Date Of Examination</label>
    <type>Date</type>
</CustomField>