force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_Batch__c.field-meta.xml
<CustomField>
    <fullName>Rve_Batch__c</fullName>
    <label>Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>