force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Rve_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>