force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_Exam_Application__c.field-meta.xml
<CustomField>
    <fullName>Rve_Exam_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rve Exam Application</label>
    <referenceTo>Rve_Exam_Application__c</referenceTo>
    <relationshipLabel>Exam Application Line Items</relationshipLabel>
    <relationshipName>Rve_Exam_Application_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>