force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_QP_Code__c.field-meta.xml
<CustomField>
    <fullName>Rve_QP_Code__c</fullName>
    <label>Rve QP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>