force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_Semester__c.field-meta.xml
<CustomField>
    <fullName>Rve_Semester__c</fullName>
    <label>Rve Semester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>