force-app/main/default/objects/Rve_Exam_Application_Line_Item__c/fields/Rve_Subject__c.field-meta.xml
<CustomField>
    <fullName>Rve_Subject__c</fullName>
    <label>Rve Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>